[tool.poetry]
name = "dotemp-py"
version = "0.1.0"
description = ""
authors = ["pankaja <pankaja13.psd@gmail.com>"]
readme = "README.md"
packages = [{include = "dotemp"}]

[tool.poetry.dependencies]
python = "^3.7.2"
python-digitalocean = "^1.17.0"
pydo = "^0.1.4"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
